--- a/index.html
+++ b/index.html
@@ -23,13 +23,11 @@
       </a>
     </div>
   </nav>
-  
   <br>
-
 <div class="container">
     <div class="container">
       <div class="plan1">
-        <h4>Sponsor Platino</h4>
+        <h3>Tipo de Cambio de Hoy</h3>
       </div>
       <div class="hwrap"><div class="hmove">
         <div class="hitem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
@@ -73,57 +71,48 @@
 <br>
 <!--Section 2-->
 <div class="cardsection">
+  <div class="plan1">
+    <h4>Sponsor VIP</h4>
+  </div>
     <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <h1>$13.50</h1>
-              <div class="card-body">
-                <h1 class="card-title"><b>México</b></h1>
-                <h3>Intermex</h3>
-                <h4 class="card-text">Bancomer</h4>
-                <p class="card-text">El Rancho Market</p>
-                <a href="https://www.google.com/maps/dir/30.1760512,-81.8413568/la+peque%C3%B1ita+utah/@34.6152931,-114.9386994,4z/data=!3m1!4b1!4m9!4m8!1m1!4e1!1m5!1m1!1s0x87528ae91158088b:0x2cf09820a22bdb51!2m2!1d-111.8885429!2d40.7116602" class="btn btn-primary" target="_blank">Find Agent</a>
-              </div>
-            </div>
-          </div>
-
-          <br>
-
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <h1>$8.05</h1>
-              <div class="card-body">
-                <h1 class="card-title"><b>Guatemala</b></h1>
-                <h3>Intermex</h3>
-                <h4 class="card-text">Bancomer</h4>
-                <p class="card-text">El Rancho Market</p>
-                <a href="#" class="btn btn-primary">Find Agent</a>
-              </div>
-              </div>
-          </div>
-
-          <br>
-
-          <div class="col">
-            <div class="card" style="width: 18rem;">
-              <h1>$11.18</h1>
-              <div class="card-body">
-                <h1 class="card-title"><b>El Salvador</b></h1>
-                <h3>Intermex</h3>
-                <h4 class="card-text">Bancomer</h4>
-                <p class="card-text">El Rancho Market</p>
-                <a href="#" class="btn btn-primary">Find Agent</a>
-              </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">El Rancho Market</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Panaderia Toluca</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <div class="card-body">
+              <h5 class="card-title">Carniceria 3 Hermanos</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
 </div>
 </div>
 
 <br>
 
 <div class="container">
+  <div class="plan1">
+    <h4>Sponsor Exclusivo</h4>
+  </div>
   <div class="hwrap"><div class="hmove">
     <div class="hitem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
     <div class="hitem">Aliquam consequat varius consequat.</div>
@@ -136,6 +125,9 @@
 
 <!--Section 3-->
 <div class="container">
+  <div class="plan1">
+    <h4>Sponsor Platino</h4>
+  </div>
     <div class="container">
         <div class="row">
           <div class="col">
