--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
           </div>
         </div>
         <div class="col">
-          <div class="card h-100">
+          <iframe width="365" height="315" src="https://www.youtube-nocookie.com/embed/sQ3PE3lBS7Y?rel=0?version=3&autoplay=1&controls=0&&showinfo=0&loop=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <!--<div class="card h-100">
             <div class="card-body">
               <h5 class="card-title">Panaderia Toluca</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
-          </div>
+          </div>-->
         </div>
         <div class="col">
           <div class="card h-100">
@@ -115,7 +116,7 @@
 
 <br>
 
-<!--Section 3-->
+<!--Section 3
 <div class="container">
   <div class="plan1">
     <h4>Sponsor Platino</h4>
@@ -133,7 +134,7 @@
         
       </div>
 </div>
-</div>
+</div>-->
 
 
 <!--
