--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <nav class="navbar bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+        <img src="Assets/Imgs/bell.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
         AnunciosJAX
       </a>
     </div>
