--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="card-body">
               <h5 class="card-title">El Rancho Market</h5>
               <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="https://goo.gl/maps/JUKhngsuaDjR97Es5" target="_blank" btn-primary">Go somewhere</a>
             </div>
           </div>
         </div>
